--- a/SpaghettiCarbonara.html
+++ b/SpaghettiCarbonara.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe - Chocolate Lava Cake</title>
+    <title>Recipe - Spaghetti Carbonara</title>
     <link rel="stylesheet" href="assets/css/subrecipestyle.css">
 </head>
 <body>
